--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
       document.getElementById("buildup-container").style.display = "none";
       document.getElementById("final-container").style.display = "flex";
       // Reset to the original background image.
-      document.body.style.background = "url('finalbackground.jpg') no-repeat center center fixed";
+      document.body.style.background = "url('finalbackground.JPG') no-repeat center center fixed";
       document.body.style.backgroundSize = "cover";
     }
 
