--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
       {
         question: "What lego flower did we first build?",
         options: ["dandelions", "orchids", "daffodils", "roses"],
-        correct: "daffodils",
+        correct: "orchids",
         background: "#E1BEE7"
       },
       {
